src/yini_test/cases/golden/strict/valid/sections/section-backticked-name.strict.yini
@yini strict

^ `Section With Spaces`
name = "strict-backticked-name"
enabled = true

/END
