src/yini_test/cases/golden/strict/invalid/sections/multiple-top-level-sections.strict.yini
@yini strict

^ Application
name = "strict-multiple-top-level-sections"

^ Runtime
environment = "production"

/END
